other/res/restrict-ingress-classes/.kyverno-test/kyverno-test.yaml
apiVersion: cli.kyverno.io/v1alpha1
kind: Test
metadata:
  name: restrict-ingress-classes
policies:
- ../restrict-ingress-classes.yaml
resources:
- resource.yaml
results:
- kind: Ingress
  policy: restrict-ingress-classes
  resources:
  - default/minimal-ingress-2
  result: fail
  rule: validate-ingress
- kind: Ingress
  policy: restrict-ingress-classes
  resources:
  - default/minimal-ingress-1
  result: pass
  rule: validate-ingress
